# kaelix

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.backup.md  TODO.md  clippy.toml  clippy.toml.backup  rustfmt.toml
.cargo/: config.toml
.github/workflows/: README.md  docs.yml  performance.yml  quality.yml  release.yml  security.yml
.serena/: project.yml
docs/: ARCHITECTURE.md  CODE_REVIEW_CHECKLIST.md  DEVELOPER_GUIDE.md  PERFORMANCE.md  QUALITY_METRICS.md
docs/phases/: README.md  phase-0-testing-infrastructure.md  phase-1-foundation-architecture.md  template.md
docs/phases/week-summaries/: .keepfile  phase-1-week-2-detailed.md  phase-1-week-2-summary.md  phase-1-week-3-plan.md  phase-1-week-3-plugin-system.md
kaelix-benches/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
kaelix-benches/benches/: baseline.rs  concurrent.rs  latency.rs  latency_benchmark.rs  memory.rs  message_throughput.rs  stress.rs  throughput.rs
kaelix-benches/src/: config.rs  lib.rs  metrics.rs  regression.rs  setup.rs  utils.rs  validators.rs
kaelix-broker/: Cargo.toml
kaelix-broker/src/: broker.rs  config.rs  lib.rs  network.rs  routing.rs  storage.rs
kaelix-broker/src/network/: connection.rs  listener.rs  mod.rs  server.rs
kaelix-cluster/: Cargo.toml  README.md
kaelix-cluster/benches/: swim_benchmark.rs  swim_performance.rs
kaelix-cluster/docs/: CLUSTER_MESSAGES.md  raft-election-algorithm.md  test_utilities.md
kaelix-cluster/src/: error.rs  lib.rs  types.rs
kaelix-cluster/src/communication/: mod.rs
kaelix-cluster/src/config/: mod.rs
kaelix-cluster/src/consensus/: mod.rs
kaelix-cluster/src/consensus/raft/: cluster.rs  integrated_coordinator.rs  log_replication.rs  mod.rs
kaelix-cluster/src/ha/: chaos.rs  client.rs  coordinator.rs  mod.rs  monitor.rs  recovery.rs
kaelix-cluster/src/membership/: mod.rs
kaelix-cluster/src/messages/: mod.rs  tests.rs
kaelix-cluster/src/node/: mod.rs
kaelix-cluster/src/test_utils/: mock_network.rs  mod.rs  test_harness.rs  test_harness_tests.rs
kaelix-cluster/src/time/: mod.rs
kaelix-cluster/tests/: raft.rs
kaelix-cluster/tests/raft/: core_tests.rs
kaelix-consumer/: Cargo.toml
kaelix-consumer/src/: config.rs  consumer.rs  lib.rs  offset.rs  subscription.rs
kaelix-core/: Cargo.toml  test_validation.rs
kaelix-core/docs/: config-schema.md
kaelix-core/docs/phases/: phase-1-completion-summary.md
kaelix-core/examples/: multiplexing_demo.rs
kaelix-core/src/: error.rs  lib.rs  lib_multiplexing_only.rs  message.rs  prelude.rs  stream.rs  types.rs
kaelix-core/src/config/: hot_reload.rs  loader.rs  mod.rs  schema.rs  validator.rs
kaelix-core/src/multiplexing/: backpressure.rs  error.rs  mod.rs  registry.rs  router.rs  scheduler.rs
kaelix-core/src/plugin/: capabilities.rs  context.rs  error.rs  hooks.rs  lifecycle.rs  loader.rs  metrics.rs  mod.rs  registry.rs  sandbox.rs  security.rs  traits.rs
kaelix-core/src/protocol/: codec.rs  error.rs  frame.rs  mod.rs
kaelix-core/src/runtime/: affinity.rs  diagnostics.rs  executor.rs  metrics.rs  mod.rs  scheduler.rs  worker.rs
kaelix-core/src/telemetry/: collector.rs  config.rs  error.rs  exporter.rs  logging.rs  metrics.rs  mod.rs  performance.rs  registry.rs  tracing.rs
kaelix-core/tests/: message_validation_test.rs
kaelix-publisher/: Cargo.toml
kaelix-publisher/src/: batch.rs  config.rs  connection.rs  lib.rs  publisher.rs
kaelix-storage/: BENCHMARKS_SUMMARY.md  Cargo.toml  temp_rotation_fix.patch
kaelix-storage/benches/: README.md  benchmark_runner.rs  wal_benchmarks.rs
kaelix-storage/docs/: api-reference.md  examples.md  integration.md  performance.md  recovery.md
kaelix-storage/docs/wal/: README.md  architecture.md
kaelix-storage/scripts/: run_benchmarks.sh
kaelix-storage/src/: error.rs  lib.rs  traits.rs  transactions.rs  types.rs
kaelix-storage/src/backends/: memory.rs  mod.rs
kaelix-storage/src/integration/: broker_bridge.rs  mod.rs
kaelix-storage/src/replication/: consistency.rs  manager.rs  metrics.rs  mod.rs  protocol.rs  quorum.rs  recovery.rs  transport.rs
kaelix-storage/src/segments/: entry.rs  mod.rs  segment.rs  segment_writer.rs
kaelix-storage/src/wal/: batch.rs  config.rs  entry.rs  mod.rs  recovery.rs  rotation.rs  segment.rs
kaelix-storage/tests/: wal_comprehensive_tests.rs
kaelix-tests/: Cargo.toml
kaelix-tests/examples/: monitoring_demo.rs
kaelix-tests/kaelix-tests/: Cargo.toml
kaelix-tests/kaelix-tests/kaelix-tests/fuzz/: Cargo.toml
kaelix-tests/kaelix-tests/kaelix-tests/fuzz/src/: protocol_fuzzer.rs
kaelix-tests/kaelix-tests/kaelix-tests/src/: lib.rs
kaelix-tests/kaelix-tests/kaelix-tests/src/security/: context.rs  metrics.rs  mod.rs  scenario.rs  threat_model.rs
kaelix-tests/src/: context.rs  generators.rs  lib.rs  macros.rs  utils.rs  validators.rs
kaelix-tests/src/cluster/: mod.rs
kaelix-tests/src/data/: mod.rs  persistence.rs
kaelix-tests/src/fixtures/: datasets.rs  mod.rs  scenarios.rs
kaelix-tests/src/generators/: data.rs  efficient.rs  load.rs  properties.rs  realistic.rs  workload.rs
kaelix-tests/src/metrics/: mod.rs
kaelix-tests/src/monitoring/: alerts.rs  mod.rs  realtime.rs
kaelix-tests/src/observability/: mod.rs
kaelix-tests/src/orchestration/: mod.rs
kaelix-tests/src/properties/: consensus.rs  messaging.rs  mod.rs  performance.rs  security.rs
kaelix-tests/src/reporting/: ci.rs  dashboard.rs  mod.rs
kaelix-tests/src/scenarios/: load.rs  mod.rs
kaelix-tests/src/simulators/: mod.rs  network.rs
kaelix-tests/src/validators/: invariants.rs
kaelix-tests/tests/: demo_infrastructure_test.rs
kaelix-tests/tests/e2e/: test_full_pipeline.rs  test_performance_targets.rs
kaelix-tests/tests/infrastructure/: test_core_framework.rs  test_property_based.rs
kaelix-tests/tests/integration/: basic.rs  consensus.rs  failover.rs
kaelix-tests/tests/performance/: benchmark_throughput.rs  memory_tracking.rs
