[workspace]
members = [
    "kaelix-core",
    "kaelix-broker",
    "kaelix-publisher",
    "kaelix-consumer",
    "kaelix-cluster",
    "kaelix-storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kaelix Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kaelix/kaelix"
homepage = "https://kaelix.org"
documentation = "https://docs.rs/kaelix"
keywords = ["streaming", "messaging", "broker", "async", "high-performance"]
categories = ["network-programming", "asynchronous", "data-structures"]

[workspace.dependencies]

# Core dependencies
uuid = { version = "1.11.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

# Async runtime - SECURITY UPDATED
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
tokio-test = "0.4"

# Configuration and observability - SECURITY UPDATED
config = "0.14"
color-eyre = "0.6"
ahash = "0.8.11"
# SECURITY FIX: validator upgrade to resolve ReDOS vulnerability
validator = { version = "0.20", features = ["derive"] }




# Cryptographic utilities - SECURITY UPDATED
blake3 = "1.5"
crc32fast = "1.4"
zeroize = "1.8.1"
ring = "0.17"
subtle = "2.6"
kaelix-core = { path = "kaelix-core" }


# High-performance data structures - SECURITY UPDATED
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
crossbeam = "0.8"
smallvec = "1.13"

# SECURITY FIX: EvMap replacement - resolves potential memory vulnerabilities
dashmap = "6.0"
flume = "0.11"
num_cpus = "1.16"
lock_api = "0.4.11"  # Security fix: data race issues resolved
arc-swap = "1.7"

# Parallel computing
rayon = "1.10"

# Networking - SECURITY UPDATED
quinn = "0.11"
rustls = "0.23"
socket2 = "0.5.7"  # Security fix: replaces net2, resolves vulnerabilities

# Observability and metrics - SECURITY UPDATED  
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
# SECURITY FIX: Update prometheus to resolve protobuf vulnerability
prometheus = "0.17.0"  # Will be overridden to secure version in dependents

# File system operations - SECURITY UPDATED
tempfile = "3.12"  # Security fix: tmp file vulnerabilities resolved
walkdir = "2.5"
notify = "6.1"

# Serialization and encoding - SECURITY UPDATED
bytes = { version = "1.7", features = ["serde"] }
bincode = "1.3"
flate2 = "1.0"
lz4 = "1.25"

# Time utilities - SECURITY UPDATED  
chrono = { version = "0.4", features = ["serde", "std"] }

# Development and testing - SECURITY UPDATED
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7"
test-case = "3.3"
rstest = "0.19"
mockall = "0.12"
rand = "0.8"

# Signal handling - SECURITY UPDATED
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Plugin system support
libloading = "0.8"

# Async trait support
async-trait = "0.1"

# Time utilities - avoid yanked versions
instant = "0.1.13"  # Use specific version to avoid potential issues

[profile.release]
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true
incremental = true

[profile.test]
debug = true
overflow-checks = true

[profile.bench]
debug = false
overflow-checks = false
lto = true
codegen-units = 1