[package]
name = "kaelix-consumer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance message consumer client for MemoryStreamer"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal dependencies
kaelix-core = { path = "../kaelix-core" }

# Core async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Networking
quinn = { workspace = true }

# Data handling
serde = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tokio-test = "0.4"