[package]
name = "kaelix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core streaming library for MemoryStreamer"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Data handling
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }

# Concurrency
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Observability
tracing = { workspace = true }

# Security
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
tokio-test = "0.4"