[workspace]
members = [
    ".",
    "fuzz"
]

[package]
name = "kaelix-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Security Testing
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Cryptography
ring = "0.17"
x509-parser = "0.16"
jsonwebtoken = "9.3"

# Authentication & Authorization
oauth2 = "4.4"
sasl = "0.5"

# Fuzzing
arbitrary = "1.3"
libfuzzer-sys = { version = "0.4", optional = true }

# Performance & Metrics
criterion = "0.5"
measure_time = "0.1"

# Testing Frameworks
proptest = "1.4"
mockall = "0.12"

[features]
fuzz = ["libfuzzer-sys"]

[[bench]]
name = "security_benchmarks"
harness = false

[dev-dependencies]
cargo-fuzz = "0.11"
